--- a/index.html
+++ b/index.html
@@ -1,176 +1,120 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Escolha sua Órtese</title>
+  <title>OrtoFácil3D - Cada Pessoa é Única</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 20px;
-      background-color: #f2f2f2;
+    :root {
+      --primary-color: #0066cc;
+      --secondary-color: #00c2ff;
+      --background-dark: #f0f4f8;
+      --card-bg: #ffffff;
+      --text-color: #333;
     }
-    .logo {
-      font-size: 24px;
-      font-weight: bold;
-      color: #0077cc;
+
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: var(--background-dark);
+      color: var(--text-color);
+      line-height: 1.6;
+    }
+
+    header {
+      background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
+      color: white;
+      padding: 60px 20px 40px 20px;
+      text-align: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+
+    h1 {
+      font-size: 2.8rem;
+      margin-bottom: 10px;
+    }
+
+    h2 {
+      font-weight: 600;
+      font-size: 1.8rem;
+      color: var(--primary-color);
       margin-bottom: 20px;
     }
-    h1 {
-      color: #333;
+
+    .slogan {
+      font-size: 1.2rem;
+      font-style: italic;
+      color: #e3f6ff;
     }
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin: 20px 0;
+
+    .section {
+      max-width: 900px;
+      margin: 40px auto;
+      background-color: var(--card-bg);
+      border-radius: 12px;
+      padding: 40px 30px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
     }
-    .ortese {
-      width: 150px;
+
+    .section p {
+      font-size: 1.1rem;
+    }
+
+    .botao-ir {
+      background-color: var(--primary-color);
+      border: none;
+      padding: 15px 35px;
+      font-size: 18px;
+      color: white;
+      border-radius: 50px;
       cursor: pointer;
+      margin: 50px auto;
+      display: block;
+      transition: background 0.3s ease;
     }
-    .hidden {
-      display: none;
+
+    .botao-ir:hover {
+      background-color: #004d99;
     }
-    .form-section {
-      margin-top: 30px;
-    }
-    .inputs input {
-      width: 45px;
-      padding: 5px;
-      text-align: center;
-      margin: 0 2px;
-    }
-    input, button {
-      padding: 10px;
-      font-size: 16px;
-      margin-top: 10px;
-    }
+
     footer {
-      margin-top: 40px;
-      color: #777;
+      background-color: #eaeff3;
+      color: #666;
+      text-align: center;
+      padding: 20px;
       font-size: 14px;
+      margin-top: 80px;
     }
   </style>
 </head>
 <body>
-  <div class="logo">OrtoFácil3D</div>
-  <h1>Escolha sua Órtese</h1>
+  <header>
+    <h1>OrtoFácil3D</h1>
+    <p class="slogan">Cada pessoa é única. O tratamento também deve ser.</p>
+  </header>
 
-  <div class="gallery">
-    <div>
-      <img src="https://i.imgur.com/EvCREXC.jpeg" class="ortese" style="height: 150px; width: auto; object-fit: contain;" onclick="selecionarOrtese('dedo')" title="Órtese de Dedo">
-      <div>Órtese de Dedo Personalizada</div>
-    </div>
-    <div>
-      <img src="https://i.imgur.com/h4fz1W5.jpeg" class="ortese" onclick="selecionarOrtese('escovar')" title="Órtese para Escovar os Dentes">
-      <div>Órtese para Escovar os Dentes</div>
-    </div>
-    <div>
-      <img src="https://i.imgur.com/SYOvuOs.jpeg" class="ortese" style="height: 150px; width: auto; object-fit: contain;" onclick="selecionarOrtese('digitacao')" title="Órtese para Digitação">
-      <div>Órtese para Digitação</div>
-    </div>
-    <div>
-      <img src="https://i.imgur.com/Ks1XK18.jpeg" class="ortese" onclick="selecionarOrtese('escrever')" title="Órtese para Escrever">
-      <div>Órtese para Escrever</div>
-    </div>
+  <div class="section">
+    <h2>Nossa História</h2>
+    <p>
+      A OrtoFácil3D nasceu da integração entre tecnologia, design assistivo e a medicina personalizada. Criada por profissionais com formação em saúde e engenharia, nossa proposta é oferecer soluções reais, precisas e acessíveis que respeitem a singularidade de cada paciente.
+    </p>
   </div>
 
-  <!-- Formulário Órtese de Dedo -->
-  <div id="formDedo" class="form-section hidden">
-    <h2>Preencha as medidas dos dedos</h2>
-    <p>Meça a interfalângica proximal (a maior junta de cada dedo) com paquímetro.</p>
-    <div class="hand-container">
-      <div class="hand">
-        <label>Mão Esquerda</label>
-        <img src="https://i.imgur.com/usvCrhv.png" alt="Mão Esquerda Desenho" width="250">
-        <div class="inputs">
-          <input type="number" name="E1" placeholder="D1">
-          <input type="number" name="E2" placeholder="D2">
-          <input type="number" name="E3" placeholder="D3">
-          <input type="number" name="E4" placeholder="D4">
-          <input type="number" name="E5" placeholder="D5">
-        </div>
-      </div>
-      <div class="hand">
-        <label>Mão Direita</label>
-        <img src="https://i.imgur.com/pkQ4ByZ.png" alt="Mão Direita Desenho" width="250">
-        <div class="inputs">
-          <input type="number" name="D1" placeholder="D1">
-          <input type="number" name="D2" placeholder="D2">
-          <input type="number" name="D3" placeholder="D3">
-          <input type="number" name="D4" placeholder="D4">
-          <input type="number" name="D5" placeholder="D5">
-        </div>
-      </div>
-    </div>
+  <div class="section">
+    <h2>Missão</h2>
+    <p>
+      Desenvolver órteses de alta qualidade com impressão 3D sob medida, contribuindo para o conforto, funcionalidade e bem-estar de cada pessoa. Queremos ser referência nacional em personalização no cuidado ortético.
+    </p>
   </div>
 
-  <!-- Campos Profissional -->
-  <div class="form-section">
-    <h2>Informações do Profissional de Saúde</h2>
-    <input type="text" id="profissional" placeholder="Nome do Profissional de Saúde"><br>
-    <input type="tel" id="telefoneProfissional" placeholder="Telefone para contato"><br>
-    <input type="text" id="patologia" placeholder="Patologia do paciente">
-  </div>
+  <button class="botao-ir" onclick="window.location.href='ortese_formulario_final_completo.html'">
+    Escolher minha Órtese
+  </button>
 
-  <!-- Formulário Medida da Palma -->
-  <div id="formSimples" class="form-section hidden">
-    <h2>Informe a largura da palma da mão (em cm)</h2>
-    <input type="number" id="larguraPalma" placeholder="Ex: 8.5">
-  </div>
-
-  <button onclick="enviarWhatsApp()">Enviar Pedido</button>
-
-  <footer>Autor: Thales R.<br>Todos os direitos reservados.</footer>
-
-  <script>
-    let tipoOrtese = "";
-
-    function selecionarOrtese(tipo) {
-      tipoOrtese = tipo;
-      document.getElementById("formDedo").classList.add("hidden");
-      document.getElementById("formSimples").classList.add("hidden");
-
-      if (tipo === "dedo") {
-        document.getElementById("formDedo").classList.remove("hidden");
-      } else {
-        document.getElementById("formSimples").classList.remove("hidden");
-      }
-    }
-
-    function enviarWhatsApp() {
-      let mensagem = "Olá, gostaria de solicitar uma órtese:%0A";
-
-      if (tipoOrtese === "dedo") {
-        mensagem += "Tipo: Órtese de Dedo Personalizada%0A";
-        mensagem += "📏 Medidas Mão Esquerda:%0A";
-        for (let i = 1; i <= 5; i++) {
-          const val = document.querySelector(`[name=E${i}]`).value;
-          mensagem += `D${i}: ${val}mm%0A`;
-        }
-        mensagem += "📏 Medidas Mão Direita:%0A";
-        for (let i = 1; i <= 5; i++) {
-          const val = document.querySelector(`[name=D${i}]`).value;
-          mensagem += `D${i}: ${val}mm%0A`;
-        }
-      } else if (tipoOrtese === "escovar" || tipoOrtese === "digitacao" || tipoOrtese === "escrever") {
-        const largura = document.getElementById("larguraPalma").value;
-        mensagem += `Tipo: Órtese para ${tipoOrtese}%0A`;
-        mensagem += `Largura da palma: ${largura} cm%0A`;
-      } else {
-        alert("Selecione uma órtese antes de enviar.");
-        return;
-      }
-
-      mensagem += `Profissional: ${document.getElementById('profissional').value}%0A`;
-      mensagem += `Telefone: ${document.getElementById('telefoneProfissional').value}%0A`;
-      mensagem += `Patologia: ${document.getElementById('patologia').value}%0A`;
-      mensagem += "%0A✅ A fabricação será feita em até 2 dias úteis e enviaremos o código de rastreio assim que for postado. Muito obrigado!";
-      window.open("https://wa.me/5524999537779?text=" + mensagem);
-    }
-  </script>
+  <footer>
+    &copy; 2025 OrtoFácil3D. Todos os direitos reservados.<br>
+    Tecnologia e cuidado em cada detalhe.
+  </footer>
 </body>
 </html>
