--- a/ortese_formulario_final_completo.html
+++ b/ortese_formulario_final_completo.html
@@ -172,5 +172,9 @@
       window.open("https://wa.me/5524999537779?text=" + mensagem);
     }
   </script>
+
+  <br>
+  <a href="index.html" style="display:inline-block; margin-top:40px; padding:12px 24px; background-color:#0077cc; color:white; border-radius:8px; text-decoration:none; font-weight:bold;">Voltar para Página Inicial</a>
 </body>
+
 </html>
