--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -71,13 +70,43 @@
     .botao-ir:hover {
       background-color: #004d99;
     }
-    footer {
-      background-color: #eaeff3;
-      color: #666;
+    .contato {
       text-align: center;
-      padding: 20px;
-      font-size: 14px;
-      margin-top: 80px;
+      margin-top: 40px;
+    }
+    .contato a {
+      display: inline-block;
+      margin: 10px auto;
+      padding: 12px 25px;
+      background-color: #25d366;
+      color: white;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 16px;
+    }
+    input[type=text], input[type=tel] {
+      padding: 10px;
+      margin: 5px 0;
+      width: 100%;
+      max-width: 400px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 16px;
+    }
+    .form-profissional {
+      margin-top: 20px;
+      text-align: center;
+    }
+    .form-profissional button {
+      background-color: var(--primary-color);
+      color: white;
+      border: none;
+      padding: 10px 25px;
+      font-size: 16px;
+      border-radius: 6px;
+      cursor: pointer;
+      margin-top: 10px;
     }
   </style>
 </head>
@@ -101,6 +130,25 @@
     </p>
   </div>
 
+  <div class="section">
+    <h2>Profissionais de Saúde</h2>
+    <p>Trabalhamos exclusivamente com profissionais de saúde. Cadastre-se para conhecer nossos modelos e condições de parceria. Entraremos em contato para apresentar a porcentagem oferecida por cada órtese indicada.</p>
+    <form class="form-profissional" onsubmit="enviarCadastro(); return false;">
+      <input type="text" id="nomeProf" placeholder="Nome completo" required><br>
+      <input type="tel" id="telefoneProf" placeholder="Telefone/WhatsApp" required><br>
+      <input type="text" id="profissao" placeholder="Profissão (ex: fisioterapeuta)" required><br>
+      <button type="submit">Cadastrar</button>
+    </form>
+  </div>
+
+  <div class="section">
+    <h2>Fale Conosco</h2>
+    <p>Entre em contato diretamente com a equipe OrtoFácil3D.</p>
+    <div class="contato">
+      <a href="https://wa.me/5524999537779" target="_blank">Falar no WhatsApp</a>
+    </div>
+  </div>
+
   <a class="botao-ir" href="modelos_orteses.html">Conheça Nossos Modelos</a>
   <a class="botao-ir" href="ortese_formulario_final_completo.html">Escolher Minha Órtese</a>
 
@@ -108,5 +156,15 @@
     &copy; 2025 OrtoFácil3D. Todos os direitos reservados.<br />
     Tecnologia e cuidado em cada detalhe.
   </footer>
+
+  <script>
+    function enviarCadastro() {
+      const nome = document.getElementById('nomeProf').value;
+      const telefone = document.getElementById('telefoneProf').value;
+      const profissao = document.getElementById('profissao').value;
+      const mensagem = `Novo cadastro de profissional:%0ANome: ${nome}%0ATelefone: ${telefone}%0AProfissão: ${profissao}`;
+      window.open("https://wa.me/5524999537779?text=" + mensagem, '_blank');
+    }
+  </script>
 </body>
 </html>
