--- a/ortese_formulario_final_completo.html
+++ b/ortese_formulario_final_completo.html
@@ -76,6 +76,14 @@
       <img src="https://i.imgur.com/Ks1XK18.jpeg" class="ortese" onclick="selecionarOrtese('escrever')" title="Órtese para Escrever">
       <div>Órtese para Escrever</div>
     </div>
+    <div>
+      <img src="https://i.imgur.com/PtqalbV.png" class="ortese" onclick="selecionarOrtese('abridor')" title="Abridor de Garrafa">
+      <div>Abridor de Garrafa</div>
+    </div>
+    <div>
+      <img src="https://i.imgur.com/QUvetB4.png" class="ortese" onclick="selecionarOrtese('chave')" title="Chave de Toque Fino">
+      <div>Chave de Toque Fino</div>
+    </div>
   </div>
 
   <!-- Formulário Órtese de Dedo -->
@@ -108,18 +116,24 @@
     </div>
   </div>
 
+  <!-- Formulário Medida da Palma -->
+  <div id="formSimples" class="form-section hidden">
+    <h2>Informe a largura da palma da mão (em cm)</h2>
+    <input type="number" id="larguraPalma" placeholder="Ex: 8.5">
+  </div>
+
+  <!-- Formulário Quantidade Chave -->
+  <div id="formQuantidadeChave" class="form-section hidden">
+    <h2>Quantas unidades você deseja?</h2>
+    <input type="number" id="quantidadeChave" placeholder="Ex: 2">
+  </div>
+
   <!-- Campos Profissional -->
   <div class="form-section">
     <h2>Informações do Profissional de Saúde</h2>
     <input type="text" id="profissional" placeholder="Nome do Profissional de Saúde"><br>
     <input type="tel" id="telefoneProfissional" placeholder="Telefone para contato"><br>
     <input type="text" id="patologia" placeholder="Patologia do paciente">
-  </div>
-
-  <!-- Formulário Medida da Palma -->
-  <div id="formSimples" class="form-section hidden">
-    <h2>Informe a largura da palma da mão (em cm)</h2>
-    <input type="number" id="larguraPalma" placeholder="Ex: 8.5">
   </div>
 
   <button onclick="enviarWhatsApp()">Enviar Pedido</button>
@@ -133,9 +147,14 @@
       tipoOrtese = tipo;
       document.getElementById("formDedo").classList.add("hidden");
       document.getElementById("formSimples").classList.add("hidden");
+      document.getElementById("formQuantidadeChave").classList.add("hidden");
 
       if (tipo === "dedo") {
         document.getElementById("formDedo").classList.remove("hidden");
+      } else if (tipo === "abridor") {
+        document.getElementById("formSimples").classList.remove("hidden");
+      } else if (tipo === "chave") {
+        document.getElementById("formQuantidadeChave").classList.remove("hidden");
       } else {
         document.getElementById("formSimples").classList.remove("hidden");
       }
@@ -156,10 +175,14 @@
           const val = document.querySelector(`[name=D${i}]`).value;
           mensagem += `D${i}: ${val}mm%0A`;
         }
-      } else if (tipoOrtese === "escovar" || tipoOrtese === "digitacao" || tipoOrtese === "escrever") {
+      } else if (tipoOrtese === "abridor" || tipoOrtese === "escovar" || tipoOrtese === "digitacao" || tipoOrtese === "escrever") {
         const largura = document.getElementById("larguraPalma").value;
         mensagem += `Tipo: Órtese para ${tipoOrtese}%0A`;
         mensagem += `Largura da palma: ${largura} cm%0A`;
+      } else if (tipoOrtese === "chave") {
+        const quantidade = document.getElementById("quantidadeChave").value;
+        mensagem += "Tipo: Chave de Toque Fino%0A";
+        mensagem += `Quantidade desejada: ${quantidade} unidade(s)%0A`;
       } else {
         alert("Selecione uma órtese antes de enviar.");
         return;
@@ -172,9 +195,5 @@
       window.open("https://wa.me/5524999537779?text=" + mensagem);
     }
   </script>
-
-  <br>
-  <a href="index.html" style="display:inline-block; margin-top:40px; padding:12px 24px; background-color:#0077cc; color:white; border-radius:8px; text-decoration:none; font-weight:bold;">Voltar para Página Inicial</a>
 </body>
-
 </html>
